spec/e2e/field/get_on_num.lit
123.foo # error: [line 1] Runtime error: Undefined property 'foo' for Integer.
